--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   </li>
                 </ul>
               </div>
-              <a class="btn btn-ghost text-xl">
+              <a class="btn btn-ghost hidden lg:block text-xl">
                 <img src="images/Group 2.png" alt="">
               </a>
             </div>
@@ -97,6 +97,22 @@
               <a class="btn bg-[#B68C5A] text-white">Free Consultation</a>
             </div>
         </div>
+       </div>
+       <!-- banner section start  -->
+       <div class="lg:mx-10 mx-3 mb-10">
+        <div class="hero min-h-[550px]" style="background-image: url(images/banner.png);">
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-content text-center text-neutral-content">
+              <div class="max-w-md">
+                <h1 class="mb-5 text-5xl font-bold">We Provide Effective Legal Solutions</h1>
+                <p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="flex gap-3 justify-center items-center">
+                    <input type="text" placeholder="Search your services" class="input input-bordered w-full max-w-xs" />
+                    <button class="btn btn-primary">Get Started</button>
+                </div>
+              </div>
+            </div>
+          </div>
        </div>
     </header>
     <main>
