added our client say container in the page

--- a/index.html
+++ b/index.html
@@ -131,12 +131,15 @@
                         <div class="flex gap-3 justify-center items-center">
                             <input type="text" placeholder="Search your services"
                                 class="input input-bordered w-full max-w-xs" />
-                            <button class="btn btn-primary">Get Started</button>
+                            <button class="btn text-white bg-[#B68C5A]">Get Started</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+    </header>
+    <main>
         <!-- Legal Practice Area section start  -->
         <div class="lg:mx-10 mx-3 mb-10">
             <div class="mb-10">
@@ -162,7 +165,8 @@
                     <figure><img src="images/criminal.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title mx-auto">Criminal Law</h2>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour.</p>
                         <div class="card-actions justify-center mt-5">
                             <img src="images/Frame.png" alt="">
                         </div>
@@ -173,7 +177,8 @@
                     <figure><img src="images/child.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title mx-auto">Child Support</h2>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour.</p>
                         <div class="card-actions justify-center mt-5">
                             <img src="images/Frame.png" alt="">
                         </div>
@@ -184,7 +189,8 @@
                     <figure><img src="images/education.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title mx-auto">Education Law</h2>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour.</p>
                         <div class="card-actions justify-center mt-5">
                             <img src="images/Frame.png" alt="">
                         </div>
@@ -195,7 +201,8 @@
                     <figure><img src="images/divorce.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title mx-auto">Divorce Law</h2>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour.</p>
                         <div class="card-actions justify-center mt-5">
                             <img src="images/Frame.png" alt="">
                         </div>
@@ -206,7 +213,8 @@
                     <figure><img src="images/tax.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title mx-auto">Tax Law</h2>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour.</p>
                         <div class="card-actions justify-center mt-5">
                             <img src="images/Frame.png" alt="">
                         </div>
@@ -214,9 +222,72 @@
                 </div>
             </div>
         </div>
-    </header>
-    <main>
-
+        <!-- What Our Client Say section start  -->
+        <div class="lg:mx-10 mx-3 mb-10">
+            <div class="mb-10">
+                <h1 class="text-center text-4xl font-extrabold mb-3">What Our Client Say</h1>
+                <p class="text-center w-1/2 mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            </div>
+            <!-- carousel section  -->
+            <div>
+                <div class="carousel w-full">
+                    <div id="slide1" class="carousel-item relative w-full">
+                      <!-- slide 1  -->
+                      <div class="hero min-h-[500px]" style="background-image: url(images/slider-1.jpg);">
+                        <div class="hero-overlay bg-opacity-60"></div>
+                        <div class="hero-content text-center text-neutral-content">
+                          <div class="max-w-md">
+                            <img class="mx-auto mb-5" src="images/user1.png" alt="">
+                            <h1 class="text-5xl font-bold">Awlad Hossain</h1>
+                            <p class="mb-5">UIX Designer</p>
+                            <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a> 
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                      </div>
+                    </div> 
+                    <div id="slide2" class="carousel-item relative w-full">
+                       <!-- slide 2  -->
+                       <div class="hero min-h-[500px]" style="background-image: url(images/slider-2.jpg);">
+                        <div class="hero-overlay bg-opacity-60"></div>
+                        <div class="hero-content text-center text-neutral-content">
+                          <div class="max-w-md">
+                            <img class="mx-auto mb-5" src="images/user1.png" alt="">
+                            <h1 class="text-5xl font-bold">Awlad Hossain</h1>
+                            <p class="mb-5">UIX Designer</p>
+                            <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a> 
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                      </div>
+                    </div> 
+                    <div id="slide3" class="carousel-item relative w-full">
+                       <!-- slide 3  -->
+                       <div class="hero min-h-[500px]" style="background-image: url(images/slider-3.jpg);">
+                        <div class="hero-overlay bg-opacity-60"></div>
+                        <div class="hero-content text-center text-neutral-content">
+                          <div class="max-w-md">
+                            <img class="mx-auto mb-5" src="images/user1.png" alt="">
+                            <h1 class="text-5xl font-bold">Awlad Hossain</h1>
+                            <p class="mb-5">UIX Designer</p>
+                            <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a> 
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                      </div>
+                    </div> 
+                  </div>
+            </div>
+        </div>
     </main>
     <footer>
 
