--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="lg:mx-10 mx-3 mb-10">
             <div class="mb-10">
                 <h1 class="text-center text-4xl font-extrabold mb-3">The Legal Practice Area</h1>
-                <p class="text-center w-1/2 mx-auto">There are many variations of passages of Lorem Ipsum available, but
+                <p class="text-center lg:w-1/2 mx-auto">There are many variations of passages of Lorem Ipsum available, but
                     the majority have suffered alteration in some form, by injected humour.</p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-center items-center gap-4">
@@ -226,66 +226,129 @@
         <div class="lg:mx-10 mx-3 mb-10">
             <div class="mb-10">
                 <h1 class="text-center text-4xl font-extrabold mb-3">What Our Client Say</h1>
-                <p class="text-center w-1/2 mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <p class="text-center lg:w-1/2 mx-auto">There are many variations of passages of Lorem Ipsum available, but
+                    the majority have suffered alteration in some form, by injected humour.</p>
             </div>
             <!-- carousel section  -->
             <div>
                 <div class="carousel w-full">
                     <div id="slide1" class="carousel-item relative w-full">
-                      <!-- slide 1  -->
-                      <div class="hero min-h-[500px]" style="background-image: url(images/slider-1.jpg);">
-                        <div class="hero-overlay bg-opacity-60"></div>
-                        <div class="hero-content text-center text-neutral-content">
-                          <div class="max-w-md">
-                            <img class="mx-auto mb-5" src="images/user1.png" alt="">
-                            <h1 class="text-5xl font-bold">Awlad Hossain</h1>
-                            <p class="mb-5">UIX Designer</p>
-                            <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
-                          </div>
+                        <!-- slide 1  -->
+                        <div class="hero min-h-[500px]" style="background-image: url(images/slider-1.jpg);">
+                            <div class="hero-overlay bg-opacity-60"></div>
+                            <div class="hero-content text-center text-neutral-content">
+                                <div class="max-w-md">
+                                    <img class="mx-auto mb-5" src="images/user1.png" alt="">
+                                    <h1 class="text-5xl font-bold">Awlad Hossain</h1>
+                                    <p class="mb-5">UIX Designer</p>
+                                    <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text.
+                                        It has roots in a piece of classical Latin literature from 45 BC, making it over
+                                        2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College
+                                        in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                                </div>
+                            </div>
                         </div>
-                      </div>
-                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide3" class="btn btn-circle">❮</a> 
-                        <a href="#slide2" class="btn btn-circle">❯</a>
-                      </div>
-                    </div> 
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                            <a href="#slide3" class="btn btn-circle">❮</a>
+                            <a href="#slide2" class="btn btn-circle">❯</a>
+                        </div>
+                    </div>
                     <div id="slide2" class="carousel-item relative w-full">
-                       <!-- slide 2  -->
-                       <div class="hero min-h-[500px]" style="background-image: url(images/slider-2.jpg);">
-                        <div class="hero-overlay bg-opacity-60"></div>
-                        <div class="hero-content text-center text-neutral-content">
-                          <div class="max-w-md">
-                            <img class="mx-auto mb-5" src="images/user1.png" alt="">
-                            <h1 class="text-5xl font-bold">Awlad Hossain</h1>
-                            <p class="mb-5">UIX Designer</p>
-                            <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
-                          </div>
+                        <!-- slide 2  -->
+                        <div class="hero min-h-[500px]" style="background-image: url(images/slider-2.jpg);">
+                            <div class="hero-overlay bg-opacity-60"></div>
+                            <div class="hero-content text-center text-neutral-content">
+                                <div class="max-w-md">
+                                    <img class="mx-auto mb-5" src="images/user1.png" alt="">
+                                    <h1 class="text-5xl font-bold">Awlad Hossain</h1>
+                                    <p class="mb-5">UIX Designer</p>
+                                    <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text.
+                                        It has roots in a piece of classical Latin literature from 45 BC, making it over
+                                        2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College
+                                        in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                                </div>
+                            </div>
                         </div>
-                      </div>
-                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide1" class="btn btn-circle">❮</a> 
-                        <a href="#slide3" class="btn btn-circle">❯</a>
-                      </div>
-                    </div> 
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                            <a href="#slide1" class="btn btn-circle">❮</a>
+                            <a href="#slide3" class="btn btn-circle">❯</a>
+                        </div>
+                    </div>
                     <div id="slide3" class="carousel-item relative w-full">
-                       <!-- slide 3  -->
-                       <div class="hero min-h-[500px]" style="background-image: url(images/slider-3.jpg);">
-                        <div class="hero-overlay bg-opacity-60"></div>
-                        <div class="hero-content text-center text-neutral-content">
-                          <div class="max-w-md">
-                            <img class="mx-auto mb-5" src="images/user1.png" alt="">
-                            <h1 class="text-5xl font-bold">Awlad Hossain</h1>
-                            <p class="mb-5">UIX Designer</p>
-                            <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
-                          </div>
+                        <!-- slide 3  -->
+                        <div class="hero min-h-[500px]" style="background-image: url(images/slider-3.jpg);">
+                            <div class="hero-overlay bg-opacity-60"></div>
+                            <div class="hero-content text-center text-neutral-content">
+                                <div class="max-w-md">
+                                    <img class="mx-auto mb-5" src="images/user1.png" alt="">
+                                    <h1 class="text-5xl font-bold">Awlad Hossain</h1>
+                                    <p class="mb-5">UIX Designer</p>
+                                    <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text.
+                                        It has roots in a piece of classical Latin literature from 45 BC, making it over
+                                        2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College
+                                        in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                                </div>
+                            </div>
                         </div>
-                      </div>
-                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide2" class="btn btn-circle">❮</a> 
-                        <a href="#slide1" class="btn btn-circle">❯</a>
-                      </div>
-                    </div> 
-                  </div>
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                            <a href="#slide2" class="btn btn-circle">❮</a>
+                            <a href="#slide1" class="btn btn-circle">❯</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- FAQ section start  -->
+        <div class="lg:mx-10 mx-3 mb-10">
+            <div class="mb-10">
+                <h1 class="text-center text-4xl font-extrabold mb-3">Frequently Asked Any Questions</h1>
+                <p class="text-center lg:w-1/2 mx-auto">There are many variations of passages of Lorem Ipsum available, but
+                    the majority have suffered alteration in some form, by injected humour..</p>
+            </div>
+            <!-- FAQ content  -->
+            <div class="flex-col-reverse flex lg:flex-row justify-center items-center gap-5">
+                <div class="flex-1">
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">
+                            1. Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content">
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-xl font-medium">
+                            2. Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content">
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, .</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-xl font-medium">
+                            3. Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content">
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, .</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-xl font-medium">
+                            4. Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content">
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, .</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- FAQ img  -->
+                <div class="flex-1">
+                    <img src="images/faq.png" alt="">
+                </div>
             </div>
         </div>
     </main>
