--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
         <div class="lg:mx-10 mx-3 mb-10">
             <div class="mb-10">
                 <h1 class="text-center text-4xl font-extrabold mb-3">The Legal Practice Area</h1>
-                <p class="text-center lg:w-1/2 mx-auto">There are many variations of passages of Lorem Ipsum available, but
+                <p class="text-center lg:w-1/2 mx-auto">There are many variations of passages of Lorem Ipsum available,
+                    but
                     the majority have suffered alteration in some form, by injected humour.</p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-center items-center gap-4">
@@ -226,7 +227,8 @@
         <div class="lg:mx-10 mx-3 mb-10">
             <div class="mb-10">
                 <h1 class="text-center text-4xl font-extrabold mb-3">What Our Client Say</h1>
-                <p class="text-center lg:w-1/2 mx-auto">There are many variations of passages of Lorem Ipsum available, but
+                <p class="text-center lg:w-1/2 mx-auto">There are many variations of passages of Lorem Ipsum available,
+                    but
                     the majority have suffered alteration in some form, by injected humour.</p>
             </div>
             <!-- carousel section  -->
@@ -302,7 +304,8 @@
         <div class="lg:mx-10 mx-3 mb-10">
             <div class="mb-10">
                 <h1 class="text-center text-4xl font-extrabold mb-3">Frequently Asked Any Questions</h1>
-                <p class="text-center lg:w-1/2 mx-auto">There are many variations of passages of Lorem Ipsum available, but
+                <p class="text-center lg:w-1/2 mx-auto">There are many variations of passages of Lorem Ipsum available,
+                    but
                     the majority have suffered alteration in some form, by injected humour..</p>
             </div>
             <!-- FAQ content  -->
@@ -314,7 +317,8 @@
                             1. Are application fee waivers available?
                         </div>
                         <div class="collapse-content">
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered alteration in some form, by injected humour, . </p>
                         </div>
                     </div>
                     <div class="collapse collapse-plus bg-base-200">
@@ -323,7 +327,8 @@
                             2. Are application fee waivers available?
                         </div>
                         <div class="collapse-content">
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, .</p>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered alteration in some form, by injected humour, .</p>
                         </div>
                     </div>
                     <div class="collapse collapse-plus bg-base-200">
@@ -332,7 +337,8 @@
                             3. Are application fee waivers available?
                         </div>
                         <div class="collapse-content">
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, .</p>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered alteration in some form, by injected humour, .</p>
                         </div>
                     </div>
                     <div class="collapse collapse-plus bg-base-200">
@@ -341,13 +347,90 @@
                             4. Are application fee waivers available?
                         </div>
                         <div class="collapse-content">
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, .</p>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered alteration in some form, by injected humour, .</p>
                         </div>
                     </div>
                 </div>
                 <!-- FAQ img  -->
                 <div class="flex-1">
                     <img src="images/faq.png" alt="">
+                </div>
+            </div>
+        </div>
+        <!-- Contact With Us section start  -->
+        <div class="lg:mx-10 mx-3 mb-10">
+            <div class="mb-10">
+                <h1 class="text-center text-4xl font-extrabold mb-3">Contact With Us</h1>
+                <p class="text-center lg:w-1/2 mx-auto">There are many variations of passages of Lorem Ipsum available,
+                    but the majority have suffered alteration in some form, by injected humour.</p>
+            </div>
+            <!-- contact us content  -->
+            <div class="grid grid-cols-1 lg:grid-cols-2 justify-center items-center gap-5">
+                <!-- address content  -->
+                <div class="flex flex-wrap gap-0">
+                    <div class="bg-[#F3F3F3] py-10 min-w-[250px] rounded-lg mx-auto text-center">
+                        <img class="mx-auto" src="images/address.png" alt="">
+                        <h1 class="text-2xl font-bold">Address</h1>
+                        <p>A108 Adam Street,<br>
+                            New York, NY 535022</p>
+                    </div>
+                    <div class="bg-[#F3F3F3] py-10 min-w-[250px] rounded-lg mx-auto text-center">
+                        <img class="mx-auto" src="images/call.png" alt="">
+                        <h1 class="text-2xl font-bold">Call Us</h1>
+                        <p>+88 01750 00 00 00<br>
+                            +88 01750 00 00 00</p>
+                    </div>
+                    <div class="bg-[#F3F3F3] py-10 min-w-[250px] rounded-lg mx-auto text-center">
+                        <img class="mx-auto" src="images/email.png" alt="">
+                        <h1 class="text-2xl font-bold">Email Us</h1>
+                        <p>info@gmail.com<br>
+                            info@gmail.com</p>
+                    </div>
+                    <div class="bg-[#F3F3F3] py-10 min-w-[250px] rounded-lg mx-auto text-center">
+                        <img class="mx-auto" src="images/time.png" alt="">
+                        <h1 class="text-2xl font-bold">Working Hours</h1>
+                        <p>Mon-Fri: 9AM to 5PM<br>
+                            Sunday: 9AM to 1 PM</p>
+                    </div>
+                </div>
+                <!-- message content  -->
+                <div>
+                    <label class="input input-bordered flex items-center gap-2 mb-5">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"
+                            class="w-4 h-4 opacity-70">
+                            <path
+                                d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z" />
+                        </svg>
+                        <input type="text" class="grow" placeholder="Username" />
+                    </label>
+                    <label class="input input-bordered flex items-center gap-2 mb-5">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"
+                            class="w-4 h-4 opacity-70">
+                            <path
+                                d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11Z" />
+                            <path
+                                d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z" />
+                        </svg>
+                        <input type="text" class="grow" placeholder="Email" />
+                    </label>
+                    
+                    <label class="input input-bordered flex items-center gap-2 mb-5">
+                        <input type="text" class="grow" placeholder="Search" />
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"
+                            class="w-4 h-4 opacity-70">
+                            <path fill-rule="evenodd"
+                                d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
+                                clip-rule="evenodd" />
+                        </svg>
+                    </label>
+                    <label class="input input-bordered flex items-center gap-2 mb-5">
+                        <input type="text" class="grow" value="Subject" />
+                    </label>
+                    <label class="mb-5">
+                        <textarea placeholder="Message" class="textarea textarea-bordered textarea-lg w-full" ></textarea>
+                    </label>
+                    <button class="btn mt-5 bg-[#B68C5A] text-white w-full py-4">Send Message</button>
                 </div>
             </div>
         </div>
