added footer and responsive the page for small and medium devices

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                         </svg>
                         <input type="text" class="grow" placeholder="Email" />
                     </label>
-                    
+
                     <label class="input input-bordered flex items-center gap-2 mb-5">
                         <input type="text" class="grow" placeholder="Search" />
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"
@@ -428,7 +428,8 @@
                         <input type="text" class="grow" value="Subject" />
                     </label>
                     <label class="mb-5">
-                        <textarea placeholder="Message" class="textarea textarea-bordered textarea-lg w-full" ></textarea>
+                        <textarea placeholder="Message"
+                            class="textarea textarea-bordered textarea-lg w-full"></textarea>
                     </label>
                     <button class="btn mt-5 bg-[#B68C5A] text-white w-full py-4">Send Message</button>
                 </div>
@@ -436,7 +437,60 @@
         </div>
     </main>
     <footer>
-
+        <!-- footer section start  -->
+        <footer class="footer p-10 bg-black text-white text-base-content">
+            <aside>
+                <img src="images/logo.png" alt="">
+                <p class="">There are many variations<br> of passages of Lorem Ipsum<br> available, but the majority
+                    <br>have suffered alteration in some <br>form, by injected humour.</p>
+            </aside>
+            <nav>
+                <h6 class="footer-title">Useful Link</h6>
+                <a class="link link-hover">Homes</a>
+                <a class="link link-hover">About Us</a>
+                <a class="link link-hover">Cases</a>
+                <a class="link link-hover">Blog</a>
+                <a class="link link-hover">Contact Us</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Contact Now</h6>
+                <a class="link link-hover">555 4th 5t NW, Washington<br>
+                    DC 20530, United States</a>
+                <a class="link link-hover">+88 01750 000 000<br>
+                    +88 01750 000 000</a>
+                <a class="link link-hover">info@gmail.com<br>
+                    info@gmail.com</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Subscribe</h6>
+                <p>Subscribe for our latest & Articles. We Won’t Give You Spam Mails</p>
+                <fieldset class="form-control w-80">
+                    <label class="label">
+                        <span class="label-text text-white">Enter your email address</span>
+                    </label>
+                    <div class="join">
+                        <input type="text" placeholder="Email Address" class="input input-bordered join-item" />
+                        <button class="btn btn-primary join-item">Subscribe
+                            <svg width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_12_37)">
+                                    <path
+                                        d="M12.7279 21.2427L4.52197 16.8989C10.4846 13.6228 16.9629 11.3888 23.6775 10.2931C22.5826 17.0078 20.3492 23.4863 17.0738 29.4494L12.7279 21.2427ZM12.7279 21.2427L18.0312 15.9394"
+                                        stroke="white" stroke-width="1.5" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </g>
+                                <defs>
+                                    <clipPath id="clip0_12_37">
+                                        <rect width="24" height="24" fill="white"
+                                            transform="translate(0 17) rotate(-45)" />
+                                    </clipPath>
+                                </defs>
+                            </svg>
+                        </button>
+                    </div>
+                </fieldset>
+            </nav>
+        </footer>
     </footer>
 </body>
 
