fixed all initial bags

--- a/index.html
+++ b/index.html
@@ -463,15 +463,15 @@
             </nav>
             <nav>
                 <h6 class="footer-title">Subscribe</h6>
-                <p>Subscribe for our latest & Articles. We Won’t Give You Spam Mails</p>
-                <fieldset class="form-control w-80">
+                <p>Subscribe for our latest<br> & Articles. We Won’t Give <br>You Spam Mails</p>
+                <fieldset class="form-control w-40">
                     <label class="label">
                         <span class="label-text text-white">Enter your email address</span>
                     </label>
                     <div class="join">
-                        <input type="text" placeholder="Email Address" class="input input-bordered join-item" />
-                        <button class="btn btn-primary join-item">Subscribe
-                            <svg width="34" height="34" viewBox="0 0 34 34" fill="none"
+                        <input type="text" placeholder="Email Address" class="input-bordered join-item" />
+                        <button class="btn w-10 join-item bg-[#B68C5A] text-white">
+                            <svg width="44" height="44" viewBox="0 0 34 34" fill=""
                                 xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_12_37)">
                                     <path
